fixed alignment issue for alerts

--- a/Project/css/login.css
+++ b/Project/css/login.css
@@ -1,8 +1,9 @@
 html,
 body {
   height: 100%;
+  background-color: #f5f5f5;
 }
-
+/*
 body {
   display: -ms-flexbox;
   display: flex;
@@ -12,13 +13,22 @@ body {
   padding-bottom: 40px;
   background-color: #f5f5f5;
 }
+*/
 
 .form-signin {
+  /*align-items : center;
   width: 100%;
+  height: 100%;
   max-width: 330px;
   padding: 15px;
-  margin: auto;
+  margin: auto;*/
+  position: absolute;
+  width: 300px;
+  top: 50%;
+  left: 50%;
+  margin: -170px;
 }
+
 .form-signin .checkbox {
   font-weight: 400;
 }
